# Monet_RUST

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md
.github/workflows/: android.yml  release.yml
monet_cli/: Cargo.toml
monet_cli/src/: main.rs
monet_cli/tests/: integration_tests.rs
wallpaper_colors/: Cargo.toml
wallpaper_colors/src/: color_utils.rs  contrast.rs  lib.rs  wallpaper_colors.rs
