[package]
name = "wallpaper_colors"
version = "0.1.0"
edition = "2021"

[dependencies]
material-colors = { version = "0.4", features = ["image", "std"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
bitflags = "2.11.1"
indexmap = "2.14.0"
ahash = "0.8.12"

[lib]
name = "wallpaper_colors"
path = "src/lib.rs"
